maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:8: error: '(' expected but identifier found.
}while estSurBiscuit()
       ^